--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,32 @@
-.App {
+#root {
+  background-color: pink;
   text-align: center;
+  font-size: 25px;
+  font-family: Georgia, "Times New Roman", Times, serif;
+  color: blueviolet;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.app {
+  border-radius: 2px solid black;
+  width: 500px;
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+button {
+  background-color: black;
   color: white;
+  height: 35px;
+  width: 50px;
+  border-radius: 10px;
 }
-
-.App-link {
-  color: #61dafb;
+.clock {
+  padding: 20px;
+  background-color: black;
+  color: white;
+  margin-left: 180px;
+  border-radius: 10px;
+  width: 500px;
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+#start_stop {
+  background-color: green;
+}
+#reset {
+  background-color: red;
 }
